# thingctx

./: .gitignore  .gitleaks.toml  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  NOTICE  README-pypi.md  README.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml  release.yml  security.yml
docs/: AUTH.md  BINDINGS.md  MAPPING.md  TRUST.md
examples/: 01_mcp_baseline.py  02_thingctx_baseline.py  03_thingctx_llm.py  04_trust.py  05_oauth2.py  07_media_live.py  08_media_vlm.py  09_rtsp_local.py  10_media_clip.py  11_media_video.py  12_media_publish.py  13_custom_stack.py  README.md  _mcp_http_server.py  _mcp_stdio_server.py  _measure.py  _pump.py  pump.td.json
examples/interop/: README.md
examples/interop/ditto/: README.md  capture_td.sh  drive_ditto_td.py
examples/interop/nodewot/: README.md  drive_nodewot_td.py  package.json
examples/registry/: camera.td.json  echo.td.json
scripts/: check_no_internal_leaks.sh
src/thingctx/: __init__.py  cli.py  client.py  contracts.py  invokers.py  lint.py  openapi.py  registry.py  reliability.py  runtime.py  testing.py  thing.py  trust.py  validate.py
src/thingctx/auth/: __init__.py  context.py  credentials.py  http.py  media.py  mqtt.py  providers.py  registry.py  resolve.py  secret.py  sigv4.py
src/thingctx/bindings/: __init__.py  base.py  registry.py
src/thingctx/bindings/builtin/: __init__.py  http.py  local.py  mqtt.py
src/thingctx/bindings/builtin/media/: __init__.py  backends.py  binding.py  encode.py  frame.py  sample.py
src/thingctx/contrib/: __init__.py  llm.py
src/thingctx/extensions/: __init__.py  prompts.py
src/thingctx/integrations/: __init__.py  mcp.py
src/thingctx/invokers/: base.py
src/thingctx/invokers/media/: __init__.py  backends.py  encode.py  frame.py  invoker.py  sample.py
tests/: test_auth_appliers.py  test_auth_extensible.py  test_auth_jwt_bearer.py  test_auth_sigv4.py  test_binding_auth.py  test_binding_contract.py  test_core.py  test_credential_redaction.py  test_invoker_auth.py  test_lint.py  test_mcp_bridge.py  test_media_auth.py  test_media_binding.py  test_media_invoker.py  test_media_publish.py  test_media_wiring.py  test_mqtt_live.py  test_mqtt_live_reliability.py  test_mqtt_reliability.py  test_oauth2.py  test_oauth2_live.py  test_openapi.py  test_quickstart.py  test_registry.py  test_reliability.py  test_schema_current.py  test_secret.py  test_trust.py  test_trust_mcp.py
