[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "thingctx"
version = "0.1.1"
description = "Drive any agent against any W3C WoT Thing, over any transport. No per-integration server."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [{ name = "The thingctx Authors" }]
keywords = ["llm", "wot", "web-of-things", "thing-description", "mcp", "tool-calling", "agents"]
classifiers = [
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: Apache Software License",
]
# Core is stdlib-only. Everything else is an opt-in extra so the
# package stays light and dependency-free at its core.
dependencies = []

[project.optional-dependencies]
# The LLM loop (any provider via litellm).
llm = ["litellm>=1.0"]
# Transports.
http = ["httpx>=0.25"]
mqtt = ["paho-mqtt>=2.0"]
# Validate TDs against the official W3C WoT TD 1.1 schema.
validate = ["jsonschema>=4.0"]
# Expose a Thing (or a whole fleet of TDs) to any MCP client.
mcp = ["mcp>=1.0"]
# Everything.
all = ["litellm>=1.0", "httpx>=0.25", "paho-mqtt>=2.0", "jsonschema>=4.0", "mcp>=1.0"]
dev = ["pytest>=7", "pytest-asyncio>=0.21", "jsonschema>=4.0", "mcp>=1.0", "httpx>=0.25", "ruff>=0.6"]

[project.scripts]
# Serve a Thing (or a whole fleet of TDs) to any MCP client.
thingctx-mcp = "thingctx.integrations.mcp:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
thingctx = ["data/*.json"]

[tool.pytest.ini_options]
markers = ["network: hits the network; deselect with -m 'not network'"]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
# pycodestyle errors, pyflakes, import sorting, pyupgrade, bugbear.
select = ["E", "F", "I", "UP", "B"]
